--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">SAMLTEST</a>
+                <a asp-page="/Index" class="navbar-brand">Normandy B2C SAMLTEST</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
