--- a/Pages/MetadataComponentSpace.cshtml
+++ b/Pages/MetadataComponentSpace.cshtml
@@ -20,7 +20,7 @@
         <SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://localhost:44386/logout" ResponseLocation="https://localhost:44386/logout" />
 
         <NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</NameIDFormat>
-        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://localhost:44386/IDP/AuthNRequest" />
+        <SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="https://localhost:44386/SAML/AssertionConsumerService" />
 
     </IDPSSODescriptor>
 </EntityDescriptor>
